[package]
name = "ethers-ffi"
license = "MIT OR Apache-2.0"
version = "0.5.3"
authors = ["Connor McEwen <connor.mcewen@gmail.com>"]
edition = "2021"
description = "FFI bindings for ethers-rs crate"
homepage = "https://docs.rs/ethers"
repository = "https://github.com/gakonst/ethers-rs"
keywords = ["ethereum", "web3", "celo", "ethers"]

[lib]
crate-type = ["lib", "staticlib"]
name = "ethers_ffi"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ethers-core = { version = "^0.5.0", path = "../ethers-core", features = ["eip712"]}
ethers-signers = { version = "^0.5.0", path = "../ethers-signers", default-features = false }
libc= { version = "0.2.104" }
serde_json = { version = "1.0.64", default-features = false }
opaque-pointer = "0.8.5"
rand = "0.8.4"
coins-bip32 = '0.3.1'
coins-bip39 = '0.3.0'
k256 = {version = '0.9.6', features = ['ecdsa']}

[dev-dependencies]
cargo-lipo = ">=1.0.3"
cbindgen = "0.20.0"